V11 пока самый быстрый и оттестированный вариант